--- a/styles/movies.css
+++ b/styles/movies.css
@@ -10,30 +10,29 @@
   font-weight: 700;
 }
 
-.movies div {
+.movies > div {
   width: 300px;
   height: 600px;
 
   overflow: auto;
 }
 
-.movies div::-webkit-scrollbar {
+.movies > div::-webkit-scrollbar {
   width: 0.2rem;
 }
-.movies div::-webkit-scrollbar-track {
+.movies > div::-webkit-scrollbar-track {
   background: rgba(255, 255, 255, 0.4);
 }
-.movies div::-webkit-scrollbar-thumb {
+.movies > div::-webkit-scrollbar-thumb {
   background: var(--primary);
 }
 
 .movies ul {
   display: flex;
   flex-direction: column;
-  row-gap: 28px;
 }
 
-.movies li {
+.movie {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -46,14 +45,16 @@
   width: 265px;
   height: 150px;
   border-radius: 8px;
+  overflow: hidden;
 
-  background-image: linear-gradient(180deg, rgba(14, 23, 47, 0.0001) 11.72%, #0E172F 100%), url('/assets/bob-esponja.png');
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
+  background-image: linear-gradient(180deg, rgba(14, 23, 47, 0.0001) 11.72%, #0E172F 100%);
 }
 
-.movies li span {
+.movie:not(first-child) {
+  margin-top: 50px;
+}
+
+.movie span {
   font-size: 0.875rem;
   line-height: 1.125rem;
   font-weight: 400;
@@ -61,13 +62,13 @@
   margin-bottom: 6px;
 } 
 
-.movies li strong {
+.movie strong {
   font-size: 1rem;
   line-height: 1.25rem;
   font-weight: 600;
 }
 
-.movies li button {
+.movie button {
   position: absolute;
   inset: 0;
 
@@ -83,7 +84,19 @@
   transition: all 0.6s;
 }
 
-.movies li:hover button {
+.movie:hover button {
   opacity: 1;
   transform: translate(0);
+}
+
+.movie_image {
+  position: absolute;
+  inset: 0;
+  z-index: -1;
+}
+
+.movie_image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
