--- a/styles/app.css
+++ b/styles/app.css
@@ -7,14 +7,14 @@
   height: 100vh;
   position: relative;
   overflow: hidden;
-  padding: 45px 131px 0;
+  padding: 45px 80px 0 110px;
 
 }
 
 main {
+  flex: 1;
   display: flex;
   align-items: center;
-  justify-content: space-between;
 }
 
 .app_image {
