--- a/styles/header.css
+++ b/styles/header.css
@@ -12,19 +12,35 @@ header {
   row-gap: 12px;
 
   width: 46px;
+  z-index: 2;
 
   background: transparent;
 }
 
 .button_menu span {
   width: 100%;
-  height: 2px;
+  height: 4px;
 
   display: block;
   background: var(--primary);
   border-radius: 6px;
+
+  transition: all 0.6s;
 } 
 
 .button_menu span:last-child {
   width: 55%;
 }
+
+.button_menu.active span:last-child  {
+  width: 100%;
+  transform: rotate(45deg) translateY(-21px);
+}
+
+.button_menu.active span:nth-child(1) {
+  transform: rotate(-45deg) translateY(21px);
+} 
+
+.button_menu.active span:nth-child(2) {
+  opacity: 0;
+} 
